--- a/FMS/css/style.css
+++ b/FMS/css/style.css
@@ -18,3 +18,18 @@
   #login_form_fields{
     margin-top:65px;
   }
+
+  #header_text{
+    font-size: 15pt;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  #header_username{
+    font-size: 12pt;
+    font-family: Arial, Helvetica, sans-serif;
+  }
+
+  #left_menu_sort_name{
+    font-size: 13pt;
+    font-family: Arial, Helvetica, sans-serif;
+  }
