Fixed vertical scroll of table on "Log" page

--- a/FMS/css/style.css
+++ b/FMS/css/style.css
@@ -38,6 +38,11 @@
     height: 555px !important;
     overflow: scroll;
   }
+  
+  .log_view_table_vertical{
+    height: 555px !important;
+    overflow: scroll;
+  }
 
   .hover_cursor_class:hover{
     cursor:pointer;
